2014-02-13  Araki Ken  <arakiken@users.sf.net>

	* bengali.table: "\xcf\xe8\xcd\xe8\xcd*" entries are fixed.

2014-02-12  Araki Ken  <arakiken@users.sf.net>

	* ml_str_parser.c: DRCS is converted to Unicode Private Area code point
	  in next_char().

	* ml_vt100_parser.[ch]: CSI ? 8800 h and CSI ? 8800 l are supported, and
	  the conversion from DRCS to Unicode Private Area is disabled by default.
	  (See http://github.com/saitoha/drcsterm/blob/master/README.rst)

2014-02-11  Araki Ken  <arakiken@users.sf.net>

	* README.indic: Updated.

	* win32/x_window.c: ExtTextOutW(ETO_GLYPH_INDEX) is used for drawing
	  ISCII_BENGALI and ISCII_ASSAMESE text.

	* bengali.table: "\xe8\xcd" => "\xee" is added.

	* ml_char.c: is_zerowidth is stored in attr.

2014-02-09  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: The rectangle of the unfocused cursor is fitted to the cell size.

	* README.indic: Updated.

	* x_main_config.c: The default value of use_bidi option is false instead of
	  true if -ind option is specified.

	* ml_term.[ch]: "use_ind = true" on the configuration protocol makes the
	  value of use_bidi false, and vice versa.

	* ml_line_iscii.c: The lines not only which has iscii characters but also
	  which had ones are redrawn to the end.

2014-02-09  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Indic scripts works if not_use_unicode_font=true.

	* x_screen.c: Even if ml_line_shape() returns NULL, continue processing.

	* ml_line.c: ml_line_shape() doesn't shape the line which doesn't
	  contain RTL or ISCII characters.

	* ml_ctl_loader.h, ml_functbl_{bidi|iscii}.c, libctl/ml_line_{bidi|iscii}.c:
	  ML_LINE_{BIDI|ISCII}_NEED_SHAPE and ml_line_{bidi|iscii}_need_shape()
	  are added.

	* keyboard.c: bzero -> memset

	* indian.c:
	  - isprint() which can return true for ISCII characters on some
	    environment is removed.
	  - bzero -> memset

	* bengali.table: The glyph index 0xe5 is mostly changed to 0xe6.
