@@ -1,3 +1,11 @@
+2014-02-15  Araki Ken  <arakiken@users.sf.net>
+
+	* ml_char_encoding.c: iso2022_illegal_char() which converts unicode pua to
+	  drcs before mkf_iso2022_illegal_char() is set to conv->illegal_char.
+
+	* ml_drcs.[ch]: ml_convert_unicode_pua_to_drcs() and
+	  ml_convert_drcs_to_unicode_pua() are added.
+
 2014-02-13  Araki Ken  <arakiken@users.sf.net>
 
 	* bengali.table: "\xcf\xe8\xcd\xe8\xcd*" entries are fixed.
